{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 37,
  "lineage": "0927b75d-3b0f-c0ac-d3af-a8c36de01161",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615377747770:vpc/vpc-22c28f58",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-61c19f0d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-d809e7a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-22c28f58",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b3438bcd",
            "owner_id": "615377747770",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "default-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:615377747770:loadbalancer/default-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "default-elb-1595027718.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "HTTP:8000/healthcheck.html",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "default-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0592fe5ccee879f04"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "default-elb",
            "security_groups": [
              "sg-02da63d3b7f6d72f9",
              "sg-0346386e8c87fe226"
            ],
            "source_security_group": "615377747770/API security group",
            "source_security_group_id": "sg-0346386e8c87fe226",
            "subnets": [
              "subnet-77c1013a"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_instance.api",
            "aws_security_group.ec2_api",
            "aws_security_group.elb_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:615377747770:instance/i-0592fe5ccee879f04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0592fe5ccee879f04",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fernandes",
            "monitoring": false,
            "primary_network_interface_id": "eni-09fda57c415823781",
            "private_dns": "ip-172-31-20-14.ec2.internal",
            "private_ip": "172.31.20.14",
            "public_dns": "ec2-3-84-155-136.compute-1.amazonaws.com",
            "public_ip": "3.84.155.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0689b0eb0929f5bf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0346386e8c87fe226"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-77c1013a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0346386e8c87fe226"
            ]
          },
          "depends_on": [
            "aws_security_group.ec2_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615377747770:security-group/sg-0346386e8c87fe226",
            "description": "Input role to access API service from ELB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0346386e8c87fe226",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02da63d3b7f6d72f9"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "API security group",
            "name_prefix": null,
            "owner_id": "615377747770",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-22c28f58"
          },
          "depends_on": [
            "aws_security_group.elb_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615377747770:security-group/sg-02da63d3b7f6d72f9",
            "description": "Input role to access HTTP 80 on ELB",
            "egress": [],
            "id": "sg-02da63d3b7f6d72f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ELB security group",
            "name_prefix": null,
            "owner_id": "615377747770",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-22c28f58"
          }
        }
      ]
    }
  ]
}